fix alignment for dropdown menus

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -44,8 +44,13 @@ button:hover {
 .amenities:hover .popover {
   display:block;
 }
-h2 {
+.popover li h2 {
   font-size:16px;
+  margin-left:-15px;
+}
+
+.sublist {
+  margin-left:-70px;
 }
 
 h3 {
@@ -80,6 +85,5 @@ ul {
 }
 li {
   padding: 5px;
-  margin-left:25px;
-
+  margin-left: 25px;
 }
